--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
     <h1 class="head">Crypto Coins</h1>
     <div class="container">
         <div class="coins">
+            <p>Cryptourrencies</p>
             <ul>
-                <li>Bitcoin</li>
+                <li><a href="#">Bitcoin</a> <span class="crypto-value">60000</span><span  class="crypto-value percentage">+1.2%</span></li>
+                <hr>
                 <li>Etherium</li>
+                <hr>
                 <li>Doge</li>
+                <hr>
             </ul>
         </div>
-        
-        <canvas id="myChart" width="60" height="25"></canvas>
-        
+        <div class="chart">
+            <canvas id="myChart" width="60" height="25"></canvas>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
