--- a/index.html
+++ b/index.html
@@ -12,18 +12,55 @@
     <h1 class="head">Crypto Coins</h1>
     <div class="container">
         <div class="coins">
-            <p>Cryptourrencies</p>
-            <ul>
-                <li><a href="#">Bitcoin</a> <span class="crypto-value">60000</span><span  class="crypto-value percentage">+1.2%</span></li>
+            <button class="nav" >></button>
+            <p class="coin-hidden">Cryptourrencies</p>
+            <ul class="coin-hidden">
+                <li><a href="#">Bitcoin</a> <span class="crypto-value">60000</span></li>
                 <hr>
-                <li>Etherium</li>
+                <li><a href="#">Etherium</a> <span class="crypto-value">60000</span></li>
                 <hr>
-                <li>Doge</li>
+                <li><a href="#">Doge</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Bitcoin</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Etherium</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Doge</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Bitcoin</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Etherium</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Doge</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Bitcoin</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Etherium</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Doge</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Bitcoin</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Etherium</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Doge</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Bitcoin</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Etherium</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Doge</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Bitcoin</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Etherium</a> <span class="crypto-value">60000</span></li>
+                <hr>
+                <li><a href="#">Doge</a> <span class="crypto-value">60000</span></li>
                 <hr>
             </ul>
         </div>
         <div class="chart">
-            <canvas id="myChart" width="60" height="25"></canvas>
+            <canvas id="myChart" ></canvas>
         </div>
     </div>
     <script src="script.js"></script>
