--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <h1 class="head">Crypto Coins</h1>
     <div class="container">
         <div class="coins">
-            <button class="nav" >></button>
             <p class="coin-hidden">Cryptourrencies</p>
-            <ul class="coin-hidden">
-            </ul>
+            <ul class="coin-hidden"></ul>
+        </div>
+        <div class="nav">
+            <button onclick="showHide()" id='nav-button'><</button>
         </div>
         <div class="chart">
             <canvas id="myChart" ></canvas>
